fix(hero): less scary font sizes on small viewports

--- a/_stylesheets/_hero.css
+++ b/_stylesheets/_hero.css
@@ -1,8 +1,8 @@
 .hero {
   background-color: var(--color-blue);
   color: var(--color-white);
-  font-size: var(--font-size-xl);
-  line-height: var(--line-height-xl);
+  font-size: var(--font-size-l);
+  line-height: var(--line-height-l);
   min-height: 50vh;
   margin-top: 0;
   max-width: 100%;
@@ -13,6 +13,8 @@
 
   @media (min-width: 36rem) {
     min-height: 66vh;
+    font-size: var(--font-size-xl);
+    line-height: var(--line-height-xl);
   }
 
   @media (min-height: 50rem) {
